DEC-107 Create PATCH /applications/{applicationId}
